<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragments.AddCompanyFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/tlb_toolbar"
            layout="@layout/toolbar_top"
            />

        <LinearLayout
            android:id="@+id/llv_add_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/edt_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edt_company_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                tools:targetApi="o"
                />

            <EditText
                android:id="@+id/edt_company_stock_ticker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edt_company_stock_ticker"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                tools:targetApi="o"
                />

            <EditText
                android:id="@+id/edt_company_image_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edt_company_image_url"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                tools:targetApi="o"
                />

            <Button
                android:id="@+id/btn_add_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/text_btn_add_company"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>

